# fdmforce

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: diffusion_check.py  eigenmode_check.py  grf_check.py  surrogate_check.py
docs/: api.md  design.md  index.md  make_figures.py  methodology.md  quickstart.md  roadmap.md  validation.md
src/fdmforce/: __init__.py  constants.py  halo.py
src/fdmforce/_core/: __init__.py  force.c
src/fdmforce/adapters/: __init__.py  galpy.py  tambora.py
src/fdmforce/backgrounds/: __init__.py  halo.py
src/fdmforce/engines/: __init__.py  eigenmode.py  grf.py
src/fdmforce/surrogate/: __init__.py  stochastic.py
tests/: test_adapters.py  test_surrogate.py
