[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdmforce"
version = "0.0.1"
description = "Fast Fuzzy Dark Matter potentials and forces for orbit integration (galpy, tambora)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gabriel Pfaffman" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
units = ["astropy>=5.0"]
plots = ["matplotlib>=3.5"]
galpy = ["galpy>=1.9"]
dev = ["pytest>=7", "matplotlib>=3.5", "astropy>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
